# Vulkan-AKCoreXEngine

./: CMakeLists.txt  LICENSE.txt  README.md  Vulkan AKCoreXEngine.sln
Vulkan AKCoreXEngine/: Vulkan AKCoreXEngine.vcxproj  Vulkan AKCoreXEngine.vcxproj.filters  imgui.ini
Vulkan AKCoreXEngine/Headers/: AssetManager.h  Camera.h  Cubemap.h  Macros.h  Renderer.h  UI.h  Vertices.h
Vulkan AKCoreXEngine/ImGui/: imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp
Vulkan AKCoreXEngine/Shaders/: FragmentShader.frag  FragmentShader.spv  Skybox.frag  Skybox.vert  SkyboxFrag.spv  SkyboxVert.spv  VertexShader.spv  VertexShader.vert  compile.bat
Vulkan AKCoreXEngine/Source/: AssetManager.cpp  Camera.cpp  Cubemap.cpp  Main.cpp  Renderer.cpp  TODO.txt  UI.cpp
Vulkan AKCoreXEngine/Source/ImGui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
Vulkan AKCoreXEngine/Source/ImGui/Backends/: imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp
